# spotify-cleaner

./: .gitignore  README.md  project.md  pyproject.toml
src/spotify_cleaner/: .env.example  auth.py  cli.py  interactive.py  spotify_client.py
